--- a/man/lprint-add.1
+++ b/man/lprint-add.1
@@ -6,10 +6,9 @@
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "November 21, 2019" "Michael R Sweet"
+.TH lprint-add 1 "LPrint" "December 13, 2019" "Michael R Sweet"
 .SH NAME
-lprint-add \- add a label printer
-
+lprint-add \- add a printer queue.
 .SH SYNOPSIS
 .B lprint
 .B add
@@ -30,13 +29,13 @@ The following options are recognized by
 .B lprint add:
 .TP 5
 \fB\-d \fIprinter-name\fR
-Specifies the name of the print queue.
+Specifies the name of the printer queue.
 .TP 5
 \fB\-m \fIdriver-name\fR
-Specifies the name of the print driver.
+Specifies the name of the printer driver.
 See
 .BR lprint-drivers (1)
-for the command to list the available print drivers.
+for the command to list the available printer drivers.
 .TP 5
 \fB\-o \fIoption-name=value\fR
 Specifies the default value for the given option name.
@@ -45,14 +44,16 @@ See
 for a list of supported options.
 .TP 5
 \fB\-v \fIdevice-uri\fR
-Specifies the device for the print queue.
+Specifies the device for the printer queue.
 The value can be a socket: URI such as "socket://11.22.33.44" or a usb: URI as listed by the
 .BR lprint-devices (1)
 command.
 .SH SEE ALSO
 .BR lprint (1),
+.BR lprint-delete (1),
 .BR lprint-devices (1),
 .BR lprint-drivers (1),
+.BR lprint-modify (1),
 .BR lprint-submit (1)
 .SH COPYRIGHT
 Copyright \[co] 2019 by Michael R Sweet.
