Finish up initial man pages.

--- a/man/lprint-cancel.1
+++ b/man/lprint-cancel.1
@@ -9,7 +9,6 @@
 .TH lprint-cancel 1 "LPrint" "December 13, 2019" "Michael R Sweet"
 .SH NAME
 lprint-cancel \- cancel one or more print jobs.
-
 .SH SYNOPSIS
 .B lprint
 .B cancel
@@ -39,11 +38,11 @@ The following options are recognized by
 .B \-a
 Cancel all print jobs.
 .TP 5
-\fB\-d \fIprinter-name\fR
+\fB\-d \fIPRINTER-NAME\fR
 Specifies the name of the printer queue.
 If not specified, the default printer is used.
 .TP 5
-\fB\-j \fIjob-id\fR
+\fB\-j \fIJOB-ID\fR
 Specifies the print job number.
 .SH SEE ALSO
 .BR lprint-default (1),
