--- a/man/lprint-jobs.1
+++ b/man/lprint-jobs.1
@@ -1,44 +1,32 @@
 .\"
-.\" ??? man page for LPrint, a Label Printer Utility
+.\" lprint-jobs man page for LPrint, a Label Printer Utility
 .\"
 .\" Copyright © 2019 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "November 21, 2019" "Michael R Sweet"
+.TH lprint-jobs 1 "LPrint" "December 13, 2019" "Michael R Sweet"
 .SH NAME
-lprint \- description
-
+lprint-jobs \- list pending print jobs.
 .SH SYNOPSIS
 .B lprint
-.B foo
+.B jobs
 [
-.B \-\-option
-.I value
+.B \-d
+.I printer-name
 ]
-
 .SH DESCRIPTION
-.B lprint
-description of what this does.
-
+This command lists pending print jobs.
+If not specified, print jobs submitted to the default printer are listed.
 .SH OPTIONS
 The following options are recognized by
-.B lprint:
+.B lprint jobs:
 .TP 5
-\fB\-\-option \fIvalue\fR
-Description of option.
-
-.SH EXIT STATUS
-The
-.B lprint
-program returns 1 if it is unable to ...
-
-.SH ENVIRONMENT
-
-.SH EXAMPLES
-
+\fB\-d \fIPRINTER-NAME\fR
+Specifies the printer queue to list.
 .SH SEE ALSO
-
+.BR lprint (1),
+.BR lprint-default (1).
 .SH COPYRIGHT
 Copyright \[co] 2019 by Michael R Sweet.
