--- a/man/lprint-modify.1
+++ b/man/lprint-modify.1
@@ -30,22 +30,22 @@ This command modifies an existing label printer queue.
 The following options are recognized by
 .B lprint modify:
 .TP 5
-\fB\-d \fIprinter-name\fR
+\fB\-d \fIPRINTER-NAME\fR
 Specifies the name of the print queue.
 .TP 5
-\fB\-m \fIdriver-name\fR
+\fB\-m \fIDRIVER-NAME\fR
 Specifies the name of the print driver.
 See
 .BR lprint-drivers (1)
 for the command to list the available print drivers.
 .TP 5
-\fB\-o \fIoption-name=value\fR
+\fB\-o \fIOPTION-NAME=VALUE\fR
 Specifies the default value for the given option name.
 See
 .BR lprint-submit (1)
 for a list of supported options.
 .TP 5
-\fB\-v \fIdevice-uri\fR
+\fB\-v \fIDEVICE-URI\fR
 Specifies the device for the print queue.
 The value can be a socket: URI such as "socket://11.22.33.44" or a usb: URI as listed by the
 .BR lprint-devices (1)
