--- a/man/lprint-shutdown.1
+++ b/man/lprint-shutdown.1
@@ -1,44 +1,21 @@
 .\"
-.\" ??? man page for LPrint, a Label Printer Utility
+.\" lprint-shutdown man page for LPrint, a Label Printer Utility
 .\"
 .\" Copyright © 2019 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "November 21, 2019" "Michael R Sweet"
+.TH lprint-shutdown 1 "LPrint" "December 13, 2019" "Michael R Sweet"
 .SH NAME
-lprint \- description
-
+lprint-shutdown \- stop a running label print server.
 .SH SYNOPSIS
 .B lprint
-.B foo
-[
-.B \-\-option
-.I value
-]
-
+.B shutdown
 .SH DESCRIPTION
-.B lprint
-description of what this does.
-
-.SH OPTIONS
-The following options are recognized by
-.B lprint:
-.TP 5
-\fB\-\-option \fIvalue\fR
-Description of option.
-
-.SH EXIT STATUS
-The
-.B lprint
-program returns 1 if it is unable to ...
-
-.SH ENVIRONMENT
-
-.SH EXAMPLES
-
+This command stops a running label print server.
 .SH SEE ALSO
-
+.BR lprint (1),
+.BR lprint-server (1).
 .SH COPYRIGHT
 Copyright \[co] 2019 by Michael R Sweet.
