--- a/man/lprint-submit.1
+++ b/man/lprint-submit.1
@@ -54,11 +54,11 @@ The second form copies the print file from the standard input.
 The following options are recognized by
 .B lprint submit:
 .TP 5
-\fB\-d \fIprinter-name\fR
+\fB\-d \fIPRINTER-NAME\fR
 Specifies the name of the printer queue.
 If not specified, the default printer is used.
 .TP 5
-\fB\-n \fIcopies\fR
+\fB\-n \fICOPIES\fR
 Specifies the number of copies.
 .TP 5
 \fB\-o finishings=3\fR
@@ -67,10 +67,10 @@ Do not cut the labels after printing.
 \fB\-o finishings=11\fR
 Cut the labels after printing.
 .TP 5
-\fB\-o media=\fIsize-name\fR
+\fB\-o media=\fISIZE-NAME\fR
 Specifies the label size.
 .TP 5
-\fB\-o media-source=\fIroll-name\fR
+\fB\-o media-source=\fIROLL-NAME\fR
 Specifies the label roll.
 .TP 5
 .B \-o orientation-requested=3
