--- a/man/lprint-default.1
+++ b/man/lprint-default.1
@@ -1,44 +1,35 @@
 .\"
-.\" ??? man page for LPrint, a Label Printer Utility
+.\" lprint-default man page for LPrint, a Label Printer Utility
 .\"
 .\" Copyright © 2019 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "November 21, 2019" "Michael R Sweet"
+.TH lprint-default 1 "LPrint" "December 13, 2019" "Michael R Sweet"
 .SH NAME
-lprint \- description
-
+lprint-default \- set or get the default printer queue.
 .SH SYNOPSIS
 .B lprint
-.B foo
+.B default
 [
-.B \-\-option
-.I value
+.B \-d
+.I printer-name
 ]
-
 .SH DESCRIPTION
-.B lprint
-description of what this does.
-
+This command gets or sets the default printer queue.
+When run without options, the current default printer is written to the standard output.
+Otherwise, the default printer is changed.
 .SH OPTIONS
 The following options are recognized by
-.B lprint:
+.B lprint default:
 .TP 5
-\fB\-\-option \fIvalue\fR
-Description of option.
-
-.SH EXIT STATUS
-The
-.B lprint
-program returns 1 if it is unable to ...
-
-.SH ENVIRONMENT
-
-.SH EXAMPLES
-
+\fB\-d \fIPRINTER-NAME\fR
+Specifies the new default printer queue.
 .SH SEE ALSO
-
+.BR lprint (1),
+.BR lprint-add (1),
+.BR lprint-modify (1),
+.BR lprint-printers (1).
 .SH COPYRIGHT
 Copyright \[co] 2019 by Michael R Sweet.
