Make default log file $TMPDIR/lprintUID.log and spool directory $TMPDIR/lprintUID.d.

--- a/man/lprint.conf.5
+++ b/man/lprint.conf.5
@@ -1,5 +1,5 @@
 .\"
-.\" ??? man page for LPrint, a Label Printer Utility
+.\" lprint.conf man page for LPrint, a Label Printer Utility
 .\"
 .\" Copyright © 2019 by Michael R Sweet.
 .\"
