--- a/man/lprint-server.1
+++ b/man/lprint-server.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-server man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-server 1 "LPrint" "December 14, 2019" "Michael R Sweet"
+.TH lprint-server 1 "LPrint" "January 2, 2020" "Michael R Sweet"
 .SH NAME
 lprint-server \- start a label print server.
 .SH SYNOPSIS
@@ -28,11 +28,11 @@ Specifies that all messages are written to the standard error.
 .TP 5
 .B \-o log-file=syslog
 Specifies that all messages are sent to the syslog service.
-This is the default.
 .TP 5
 \fB\-o log-file=\fRFILENAME\fR
 Specifies that all messages are written to the named file.
 If the file already exists, messages are appended to it.
+The default log file is "$TMPDIR/lprintUID.log".
 .TP 5
 .B \-o log-level=error
 Specifies that only error messages should be logged.
@@ -55,4 +55,4 @@ If not specified, a random port between 9000 and 9999 is chosen.
 .BR lprint (1),
 .BR lprint-shutdown (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
