Fix lprint status subcommand support for -d PRINTER.
If no printer specified, status of server is shown.

--- a/man/lprint-status.1
+++ b/man/lprint-status.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-status man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-status 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-status 1 "LPrint" "January 2, 2020" "Michael R Sweet"
 .SH NAME
 lprint-status \- show the current status of a printer
 .SH SYNOPSIS
@@ -18,7 +18,7 @@ lprint-status \- show the current status of a printer
 ]
 .SH DESCRIPTION
 This command shows the current status of a printer.
-If no printer is specified, the default printer is shown.
+If no printer is specified, the combined server state is shown.
 .SH OPTIONS
 The following options are recognized by
 .B lprint status:
@@ -29,4 +29,4 @@ Specifies the name of a printer.
 .BR lprint (1),
 .BR lprint-default (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
