--- a/man/lprint-delete.1
+++ b/man/lprint-delete.1
@@ -1,30 +1,30 @@
 .\"
 .\" lprint-delete man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-delete 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-delete 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-delete \- delete a label printer queue.
 .SH SYNOPSIS
 .B lprint
 .B delete
 .B \-d
-.I printer-name
+.I PRINTER
 .SH DESCRIPTION
 This command deletes the specified label printer queue.
 .SH OPTIONS
 The following options are recognized by
 .B lprint delete:
 .TP 5
-\fB\-d \fIPRINTER-NAME\fR
+\fB\-d \fIPRINTER\fR
 Specifies the printer queue to delete.
 .SH SEE ALSO
 .BR lprint (1),
 .BR lprint-add (1),
 .BR lprint-modify (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
