--- a/man/lprint-drivers.1
+++ b/man/lprint-drivers.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-drivers man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-drivers 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-drivers 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-drivers \- list drivers supported by the print server.
 .SH SYNOPSIS
@@ -20,4 +20,4 @@ This command lists the supported printer drivers.
 .BR lprint-devices (1),
 .BR lprint-modify (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
