--- a/man/lprint-jobs.1
+++ b/man/lprint-jobs.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-jobs man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-jobs 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-jobs 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-jobs \- list pending print jobs.
 .SH SYNOPSIS
@@ -14,7 +14,10 @@ lprint-jobs \- list pending print jobs.
 .B jobs
 [
 .B \-d
-.I printer-name
+.I PRINTER
+] [
+.B \-u
+.I PRINTER-URI
 ]
 .SH DESCRIPTION
 This command lists pending print jobs.
@@ -23,10 +26,14 @@ If not specified, print jobs submitted to the default printer are listed.
 The following options are recognized by
 .B lprint jobs:
 .TP 5
-\fB\-d \fIPRINTER-NAME\fR
+\fB\-d \fIPRINTER\fR
 Specifies the printer queue to list.
+.TP 5
+\fB\-u \fIPRINTER-URI\fR
+Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .SH SEE ALSO
 .BR lprint (1),
+.BR lprint-cancel (1),
 .BR lprint-default (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
