--- a/man/lprint-server.1
+++ b/man/lprint-server.1
@@ -6,7 +6,7 @@
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-server 1 "LPrint" "January 2, 2020" "Michael R Sweet"
+.TH lprint-server 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-server \- start a label print server.
 .SH SYNOPSIS
@@ -14,7 +14,7 @@ lprint-server \- start a label print server.
 .B server
 [
 .B \-o
-.I option-name=value
+.I OPTION=VALUE
 ]
 .SH DESCRIPTION
 This command starts a label print server.
