--- a/man/lprint-default.1
+++ b/man/lprint-default.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-default man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-default 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-default 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-default \- set or get the default printer queue.
 .SH SYNOPSIS
@@ -14,7 +14,7 @@ lprint-default \- set or get the default printer queue.
 .B default
 [
 .B \-d
-.I printer-name
+.I PRINTER
 ]
 .SH DESCRIPTION
 This command gets or sets the default printer queue.
@@ -24,7 +24,7 @@ Otherwise, the default printer is changed.
 The following options are recognized by
 .B lprint default:
 .TP 5
-\fB\-d \fIPRINTER-NAME\fR
+\fB\-d \fIPRINTER\fR
 Specifies the new default printer queue.
 .SH SEE ALSO
 .BR lprint (1),
@@ -32,4 +32,4 @@ Specifies the new default printer queue.
 .BR lprint-modify (1),
 .BR lprint-printers (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
