--- a/man/lprint-devices.1
+++ b/man/lprint-devices.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-devices man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-devices 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint-devices 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint-devices \- list connected label printer devices.
 .SH SYNOPSIS
@@ -20,4 +20,4 @@ This command lists connected label printer devices.
 .BR lprint-drivers (1),
 .BR lprint-modify (1).
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
