--- a/man/lprint.1
+++ b/man/lprint.1
@@ -1,12 +1,12 @@
 .\"
 .\" Main man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019 by Michael R Sweet.
+.\" Copyright © 2019-2020 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "December 13, 2019" "Michael R Sweet"
+.TH lprint 1 "LPrint" "January 4, 2020" "Michael R Sweet"
 .SH NAME
 lprint \- a label printer utility
 .SH SYNOPSIS
@@ -80,4 +80,4 @@ Submit a file for printing.
 .BR lprint-submit (1),
 .BR lprint.conf (5)
 .SH COPYRIGHT
-Copyright \[co] 2019 by Michael R Sweet.
+Copyright \[co] 2019-2020 by Michael R Sweet.
