--- a/man/lprint-submit.1
+++ b/man/lprint-submit.1
@@ -6,7 +6,7 @@
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-submit 1 "LPrint" "January 4, 2020" "Michael R Sweet"
+.TH lprint-submit 1 "LPrint" "January 5, 2020" "Michael R Sweet"
 .SH NAME
 lprint-submit \- submit a file for printing.
 .SH SYNOPSIS
@@ -137,6 +137,7 @@ Specifies the print job name.
 Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .SH SEE ALSO
 .BR lprint-cancel (1),
-.BR lprint-default (1).
+.BR lprint-default (1),
+.BR lprint-options (1).
 .SH COPYRIGHT
 Copyright \[co] 2019-2020 by Michael R Sweet.
