Reword - LPrint is a Label Printer Application (since "printer application" is the terminology I've been using for CUPS over the past couple years...)

--- a/man/lprint.1
+++ b/man/lprint.1
@@ -8,7 +8,7 @@
 .\"
 .TH lprint 1 "LPrint" "January 5, 2020" "Michael R Sweet"
 .SH NAME
-lprint \- a label printer utility
+lprint \- a label printer application
 .SH SYNOPSIS
 .B lprint
 [
@@ -16,7 +16,7 @@ lprint \- a label printer utility
 ] [ OPTIONS ] [ FILES ]
 .SH DESCRIPTION
 .B lprint
-is a label printer utility that can be run standalone or as a dedicated IPP Everywhere network service.
+is a label printer application that can be run standalone or as a dedicated IPP Everywhere network service.
 .B lprint
 supports printing PNG images, Apple/PWG raster files, and printer-specific label files to USB and network label printers.
 If no sub-command is specified, "submit" is assumed.
